# voxly

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  performance.md
docs/adr/: 0001-initial-architecture.md  0002-engine-abstraction-layer.md  0003-audio-pipeline.md  0004-model-management-and-downloads.md  0005-frontend-architecture.md  0006-coordinator-and-lifecycle.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  events.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  processor.rs  vad.rs
src-tauri/src/commands/: audio.rs  mod.rs  model.rs  transcription.rs
src-tauri/src/coordinator/: coordinator.rs  mod.rs
src-tauri/src/inference/: burn_engine.rs  engine.rs  manager.rs  mod.rs
src-tauri/src/model/: manager.rs  mod.rs
src/routes/: +layout.svelte  +page.svelte
