[package]
name = "voxly"
version.workspace = true
description = "Voxly - Fully local, privacy-first, realtime speech-to-text desktop app powered by Voxtral Mini Realtime"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voxly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core quality crates (will be expanded)
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }

# Audio pipeline (cpal base; decibri or stream-audio can replace later)
cpal = "0.16"
rubato = "0.16"

# Model management & downloads (Hugging Face)
hf-hub = { version = "0.3", features = ["tokio"] }
async-trait = "0.1"

# Future: Burn + Voxtral realtime crate (added when integration begins; git dep)
# burn = { version = "0.15", features = ["ndarray"] }  # or wgpu, cuda etc.
# voxtral-mini-realtime-rs = { git = "https://github.com/TrevorS/voxtral-mini-realtime-rs", optional = true }

[features]
default = []
# burn-voxtral = ["dep:voxtral-mini-realtime-rs"]


